--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'Maldon, Battle of, England, 991 -- Poetry'
 - !lcsh 'Judith (Biblical figure) -- Poetry'
 - !lcsh 'Brunanburh, Battle of, 937 -- Poetry'
+- GITenberg
 title: 'Elene; Judith; Athelstan, or the Fight at Brunanburh; Byrhtnoth, or the Fight
   at Maldon; and the Dream of the Rood
 
